# pico_midi_pedal

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.c  midi_app.c  midi_app.h  midi_gpio.c  midi_gpio.h
